--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,11 @@
   min-width: 100%;
   background: linear-gradient(to bottom, white 0%, white 40%, #F5F4F4 60%, #F5F4F4 100%);
 }
+
+body {
+  overflow-x: hidden;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
